<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="15dp"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:text="@string/Mon"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/partly_cloudy"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">


        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:text="@string/Tue"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/rainy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/showers_n24c_31c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:text="@string/Wed"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/rainy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/rain_n22c_23c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Thu" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/scattered_showers_n22c_27c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Fri" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/mostly_cloudy_n22c_30c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">


        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Sat" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/partly_cloudy"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/partly_cloudy_n24c_31c"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Sun" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/thunderstorm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/thunderstorms_n25c_28c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/Mon"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/scattered_thunderstorms_n24c_27c"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Tue" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/rainy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/showers_n24c_26c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/Wed"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/scattered_thunderstorms_n23c_27c"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Thu" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/scattered_showers_n22c_27c"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Fri" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/mostly_cloudy_n22c_30c"
            android:textSize="15sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">


        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Sat" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/partly_cloudy"
            android:src="@drawable/partly_cloudy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/partly_cloudy_n24c_31c"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="113dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/Sun" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/thunderstorm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/thunderstorms_n25c_28c"
            android:textSize="15sp" />

    </LinearLayout>
    </LinearLayout>